fix profile jump

--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -27,8 +27,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  margin-top: 15px;
-  margin-bottom: 32px;
+  margin-bottom: 10px;
 
   span {
     font-family: 'Colfax-Bold';
@@ -36,6 +35,12 @@
     padding-left: 23px;
     padding-top: 10px
   }
+}
+
+.history-container {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
 }
 
 .profile-avatar-container {
